--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,12 @@
       "src": "/icons/icon-192.png",
       "type": "image/png",
       "sizes": "192x192"
+    },
+    {
+      "src": "/icons/maskable_icon.png",
+      "type": "image/png",
+      "sizes": "274x274",
+      "purpose": "maskable"
     }
   ],
   "start_url": "/index.html",
