--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
       "purpose": "maskable"
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "index.html",
   "background_color": "#3367D6",
   "display": "fullscreen",
   "scope": "/",
