--- a/manifest.json
+++ b/manifest.json
@@ -28,6 +28,7 @@
   "background_color": "#3367D6",
   "display": "fullscreen",
   "scope": "/",
-  "theme_color": "#3367D6"
+  "theme_color": "#000000",
+  "theme_color": "#000000"
   
 }
