--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "icons": [
     {
       "src": "./icons/icon-512.png",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "sizes": "512x512"
     },
     {
